# crying_vegetable

./: PKG-INFO  README.md  pyproject.toml  setup.py
crying_vegetable/: __init__.py  crying_vegetable_jikken.py  vegetablecry.py  vocoder.py
docs/: index.html
