[tool.poetry]
name = "crying_vegetable"
version = "0.2.3"
description = "create vocoded vegetable cry sound from time variant NDI values"
authors = ["Kotaro SONODA <kotaro@nagasaki-u.ac.jp>"]
license = "MIT"
readme = "README.md"
include = ["output_6_0.png", "output_10_0.png", "output_12_1.png", "docs"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.2"
SoundFile = "^0.10.3"
pandas = "^1.4.0"
scipy = "^1.8.0"
ipython = "^8.0.1"
fire = "^0.4.0"
matplotlib = "^3.5.1"
japanize-matplotlib = "^1.1.3"
Pillow = "9.0.0"
SciencePlots = "^1.0.9"
kslib = {git = "https://github.com/helmenov/kslib", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.9.0"
matplotlib = "^3.5.1"
japanize-matplotlib = "^1.1.3"
Pillow = "9.0.0"
ipython = "^8.0.1"
SciencePlots = "^1.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crying_vegetable_jikken = "crying_vegetable.crying_vegetable_jikken:main"
